
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih

********************************************************************************

  August 28 2017
  deviceServiceVersion = 1013462
	
  [*] Errors suppressed when paper ended after check closed
  [+] Added print continuation DIO-command and method
  
********************************************************************************

  August 23 2017
  deviceServiceVersion = 1013461
	
  [*] Fixed rext printing with font number in check
  [*] Fixed #20: get rid of hardcoded payment names
  [+] Added printRecMessage overload which accepts font number
  [+] Added property openReceiptOnBegin to enable check opening on beginFiscalReceipt
  [+] Added ability to pass paymentType and subjectType for check position

********************************************************************************

  August 15 2017
  deviceServiceVersion = 1013460
	
  [-] Fixed max payment type number when reading payment type names	

********************************************************************************

  August 14 2017
  deviceServiceVersion = 1013459
	
  [-] Fixed SKL generation when using FSSale command
	
********************************************************************************

  August 3 2017
  deviceServiceVersion = 1013458
	
  [+] Added methods to start/stop and get status of FSService
  [-] Fixed line graphics printing
  [+] Added ability to disable trailer printing completely by setting numTrailerLines = -1

********************************************************************************

  August 2 2017
  deviceServiceVersion = 1013457
	
  [-] Fixed bug when FSService didn't stop after close

********************************************************************************

  July 27 2017
  deviceServiceVersion = 1013456
	