@@ -14,7 +14,7 @@ import com.shtrih.util.BitUtils;
 public class FSDocType {
 
     //////////////////////////////////////////////////////////////////////
-    // 
+    //
     // 00h – нет открытого документа
     public static final int FS_DOCTYPE_NONE = 0;
     // 01h – отчет о фискализации
@@ -27,6 +27,14 @@ public class FSDocType {
     public static final int FS_DOCTYPE_DAYCLOSE = 8;
     // 10h – отчет о закрытии фискального режима
     public static final int FS_DOCTYPE_FISCAL_CLOSE = 16;
+    /*
+      11h – Бланк строкой отчетности
+      12h - Отчет об изменении параметров регистрации ККТ в связи с заменой ФН
+      13h – Отчет об изменении параметров регистрации ККТ
+      14h – Кассовый чек коррекции
+      15h – БСО коррекции
+      17h – Отчет о текущем состоянии расчетов
+     */
 
     private final int docType;
 
