@@ -406,6 +406,10 @@ public class DirectIOHandler2 {
                 new DIOContinuePrint(service).execute(data, object);
                 break;
 
+            case SmFptrConst.SMFPTR_DIO_FS_READ_DOCUMENT_TLV:
+                new DIOCReadDocumentTLV(service).execute(data, object);
+                break;
+
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
